--- a/_includes/author-bio.html
+++ b/_includes/author-bio.html
@@ -1,4 +1,4 @@
-<img src="{{ site.url }}/assets/images/{{ site.owner.avatar }}" class="bio-photo" alt="{{ site.owner.name }} bio photo"></a>
+<img src="{{ site.url }}/assets/images/{{ site.owner.avatar }}" class="bio-photo" alt="{{ site.owner.name }} bio photo">
 
 <!-- <h4>{{ site.owner.name }}</h4> -->
 
